--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Deploy to Production in App Engine
       uses: google-github-actions/deploy-appengine@v2
       with:
-        deliverables: app.yaml
+        deliverables: .github/workflows/app.yml
