--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,11 @@
 runtime: java17
 instance_class: F1
 
-entrypoint: java -jar target/GoLifeAPI.jar
+entrypoint: java -jar target/GoLifeAPI-1.0.jar
 
 handlers:
   - url: /.*
     script: auto
+
+automatic_scaling:
+  max_instances: 1  # Ajusta según tus necesidades
