DB conexion added

--- a/.github/workflows/main-gcp-appengine.yml
+++ b/.github/workflows/main-gcp-appengine.yml
@@ -22,6 +22,11 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
 
+    - name: Replace env vars in app.yaml
+         run: |
+          sed -i "s|DB_CONNECTION_STRING_PLACEHOLDER|${{ secrets.DB_CONNECTION_STRING }}|g" app.yaml
+          sed -i "s|DB_NAME_PLACEHOLDER|${{ secrets.DB_NAME }}|g" app.yaml
+
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
       with:
