--- a/app.yaml
+++ b/app.yaml
@@ -5,3 +5,7 @@ entrypoint: java -jar target/GoLifeAPI-1.0.jar
 
 automatic_scaling:
   max_instances: 1
+
+env_variables:
+  DB_CONNECTION_STRING: "DB_CONNECTION_STRING_PLACEHOLDER"
+  DB_NAME: "DB_NAME_PLACEHOLDER"
