Security Configurations + All endpoints implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=${PORT:8080}
+# Tamaño máximo de la solicitud (1MB)
+server.tomcat.max-swallow-size=1MB
+server.tomcat.max-http-form-post-size=1MB
