--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver-bom</artifactId>
+                <version>5.5.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <!-- Spring Management -->
         <dependency>
@@ -43,9 +55,9 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.7.0</version>
+            <version>2.8.9</version>
         </dependency>
-        <!-- Bucket4j for Rate Limiting-->
+        <!-- Rate Limiting: Bucket4j -->
         <!-- https://mvnrepository.com/artifact/com.bucket4j/bucket4j_jdk17-core -->
         <dependency>
             <groupId>com.bucket4j</groupId>
@@ -66,13 +78,6 @@
         <!-- MongoDB Version and Connection Management -->
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver-bom</artifactId>
-            <version>5.5.1</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
         </dependency>
     </dependencies>
@@ -86,7 +91,14 @@
                     <mainClass>org.GoLIfeAPI.Main</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
 </project>
