--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.port=${PORT:8080}
-# Tamaño máximo de la solicitud (1MB)
+# Tamaño maximo de la solicitud (1MB)
 server.tomcat.max-swallow-size=1MB
 server.tomcat.max-http-form-post-size=1MB
+# Documentacion con openapi.yaml
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.url=/docs/openapi.yaml
+springdoc.swagger-ui.config-url=
