--- a/.github/workflows/main-gcp-appengine.yml
+++ b/.github/workflows/main-gcp-appengine.yml
@@ -1,4 +1,4 @@
-name: Deploy to Google App Engine
+name: CI/CD Pipeline to Google App Engine
 
 on:
   push:
@@ -6,37 +6,71 @@ on:
       - master
 
 jobs:
-  deploy:
+
+  test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Github Action
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up JAVA 17
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Build with Maven
-      run: mvn clean package
+      - name: Cache Maven local repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-m2-
 
-    - name: Replace env vars in app.yaml
-      env:
-        DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
-        DB_NAME: ${{ secrets.DB_NAME }}
-      run: |
-        sed -i "s|DB_CONNECTION_STRING_PLACEHOLDER|$DB_CONNECTION_STRING|g" app.yaml
-        sed -i "s|DB_NAME_PLACEHOLDER|$DB_NAME|g" app.yaml
+      - name: Build & run tests
+        run: mvn --batch-mode clean verify
 
+  deploy:
+    name: Build & Deploy
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v2
-      with:
-        credentials_json: '${{ secrets.GCP_SA_KEY }}'
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Deploy to Production in App Engine
-      uses: google-github-actions/deploy-appengine@v2
-      with:
-        deliverables: app.yaml
+      - name: Cache Maven local repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-m2-
+
+      - name: Build package (skip tests)
+        run: mvn --batch-mode clean package -DskipTests
+
+      - name: Replace env vars in app.yaml
+        env:
+          DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
+          DB_NAME:               ${{ secrets.DB_NAME }}
+        run: |
+          sed -i "s|DB_CONNECTION_STRING_PLACEHOLDER|$DB_CONNECTION_STRING|g" app.yaml
+          sed -i "s|DB_NAME_PLACEHOLDER|$DB_NAME|g" app.yaml
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+      - name: Deploy to App Engine
+        uses: google-github-actions/deploy-appengine@v2
+        with:
+          deliverables: app.yaml
