--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=${PORT:8080}
+# No Mapear Endpoints No Existentes
+spring.web.resources.add-mappings=false
 # Tamaño maximo de la solicitud (1MB)
 server.tomcat.max-swallow-size=1MB
 server.tomcat.max-http-form-post-size=1MB
