--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,25 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- JUnit -->
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite-api</artifactId>
+            <version>1.12.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite-engine</artifactId>
+            <version>1.12.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.12.2</version>
+            <scope>test</scope>
+        </dependency>
         <!-- Testcontainers core -->
         <dependency>
             <groupId>org.testcontainers</groupId>
@@ -106,7 +125,6 @@
             <version>1.2.1</version>
             <scope>test</scope>
         </dependency>
-
         <!-- DOCUMENTATION: OpenAPI / Swagger UI -->
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -133,7 +151,7 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-            <!-- System-Lambda Test Env Modification-->
+            <!-- JUnit Test Suite + System-Lambda Test Env Modification-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -143,6 +161,11 @@
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                     </argLine>
+                    <excludes>
+                        <exclude>**/UserPersistenceControllerTest.java</exclude>
+                        <exclude>**/GoalPersistenceControllerTest.java</exclude>
+                        <exclude>**/RecordPersistenceControllerTest.java</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
