--- a/.github/workflows/main-gcp-appengine.yml
+++ b/.github/workflows/main-gcp-appengine.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
 
-  test:
-    name: Run Unit Tests
+  mixed-tests:
+    name: Run Mixed Test Suite
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -31,9 +31,35 @@ jobs:
       - name: Build & run tests
         run: mvn --batch-mode test
 
+  e2e-tests:
+    name: Run E2E Tests
+    needs: mixed-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Cache Maven local repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-m2-
+
+      - name: Build & run E2E Tests
+        run: mvn --batch-mode verify -DskipUnitTests=true
+
+
   deploy:
     name: Build & Deploy
-    needs: test
+    needs: e2e-tests
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
     steps:
