Firebase Connection and CORS fix

--- a/app.yaml
+++ b/app.yaml
@@ -9,3 +9,4 @@ automatic_scaling:
 env_variables:
   DB_CONNECTION_STRING: "DB_CONNECTION_STRING_PLACEHOLDER"
   DB_NAME: "DB_NAME_PLACEHOLDER"
+  FIREBASE_PROJECT_ID: "FIREBASE_PROJECT_ID_PLACEHOLDER"
