--- a/app.yaml
+++ b/app.yaml
@@ -10,3 +10,4 @@ env_variables:
   DB_CONNECTION_STRING: "DB_CONNECTION_STRING_PLACEHOLDER"
   DB_NAME: "DB_NAME_PLACEHOLDER"
   FIREBASE_PROJECT_ID: "FIREBASE_PROJECT_ID_PLACEHOLDER"
+  KMS_CRYPTO_KEY: "KMS_CRYPTO_KEY_PLACEHOLDER"
